test/netlist/error/unknown-include.bop
#include "file-not-found.bop"
